<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/ic_man"
        android:layout_marginTop="30dp"
        android:id="@+id/iv_profile_pic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_profile_pic"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/editext_white_bg"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="15dp"
            android:hint="@string/first_name"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/editext_white_bg"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="15dp"
            android:hint="@string/last_name"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/editext_white_bg"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/editext_white_bg"
            android:drawableStart="@drawable/ic_call"
            android:drawablePadding="15dp"
            android:hint="@string/phone"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="5dp"
            android:background="@drawable/editext_white_bg"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_gender"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/gender"
                android:textColor="#747373"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/r_gender"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/female" />

            </RadioGroup>

        </LinearLayout>

        <Button
            android:onClick="updateProfile"
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/save_profile"
            android:textColor="#fff"
            android:background="@drawable/red_btn"/>

    </LinearLayout>



</RelativeLayout>