<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_sos_logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/sos_logo"
            android:src="@drawable/sos_logo"
            android:layout_marginBottom="50dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/editext_white_bg"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="15dp"
            android:hint="@string/verification_code"
            android:inputType="number" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:background="@drawable/red_btn"
            android:onClick="loginUserMethod"
            android:text="@string/login"
            android:textColor="#fff" />


    </LinearLayout>

</RelativeLayout>