<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_sos_logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/sos_logo"
            android:src="@drawable/sos_logo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/editext_white_bg"
            android:drawableStart="@drawable/ic_call"
            android:drawablePadding="15dp"
            android:hint="@string/phone"
            android:inputType="textEmailAddress" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:background="@drawable/red_btn"
            android:onClick="sendVerificationMethod"
            android:text="@string/send_verification"
            android:textColor="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Login Using"
                android:gravity="center"/>
            <ImageView
                android:id="@+id/iv_google_login_icon"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_search"/>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>